Updated README with JavaFX instructions and removed .exe references